# vox-cli

./: .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
.agents/skills/vox/: SKILL.md
.agents/skills/vox/agents/: openai.yaml
.agents/skills/vox/references/: asr-playbook.md  checklist.md  failure-loop.md  intents.md  model-playbook.md  orchestration-matrix.md  pipeline-playbook.md  profile-playbook.md  response-contract.md  tts-playbook.md
.agents/skills/vox/scripts/: bootstrap.sh  common.sh  ensure_model.sh  failure_digest.sh  health_gate.sh  log_failure.sh  self_check.sh  vox_cmd.sh
docs/: runtime-concurrency-redesign.md
native/vox-dictation/: Cargo.toml  build.rs
native/vox-dictation/src/: main.rs
native/vox-vmic/: .gitignore  Makefile  Package.swift  README.md
native/vox-vmic/Sources/vmicctl/: main.swift
native/vox-vmic/docs/: architecture.md  shared-buffer.md  validation.md
native/vox-vmic/driver/: Info.plist  Makefile
native/vox-vmic/driver/src/: VirtualMicDriver.c  VirtualMicDriver.h
native/vox-vmic/scripts/: build-driver.sh  e2e-test.sh  install-driver.sh  probe-driver.sh  restart-coreaudiod.sh  smoke-test.sh  stream-file.sh  uninstall-driver.sh
native/vox-vmic/shared/: VMicBridge.c
native/vox-vmic/shared/include/: VMicBridge.h
scripts/: start-local-llm.sh  stop-local-llm.sh
src/vox_cli/: audio.py  cache.py  config.py  db.py  download.py  main.py  models.py  runtime.py  types.py
src/vox_cli/services/: __init__.py  asr_service.py  dictation_context_service.py  dictation_postprocess_service.py  dictation_service.py  dictation_ui_service.py  model_service.py  realtime_asr_service.py  self_service.py  tts_service.py  vmic_service.py
tests/: test_cache.py  test_config_dictation.py  test_db_tasks.py  test_dictation_context_service.py  test_dictation_postprocess_service.py  test_dictation_service.py  test_dictation_ui_service.py  test_main_dictation_cli.py  test_model_service.py  test_realtime_asr_service.py  test_runtime.py  test_tts_service.py
