[project]
name = "vox-cli"
version = "0.1.0"
description = "Standalone MLX Qwen ASR/TTS orchestration CLI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "huggingface_hub>=0.24.0",
  "numpy>=1.24.0",
  "soundfile>=0.12.1",
  "mlx-audio>=0.3.1",
]

[project.optional-dependencies]
mic = [
  "sounddevice>=0.4.7",
]

[project.scripts]
vox = "vox_cli.main:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_cli"]

[tool.uv]
prerelease = "allow"
